style-fix: text nopw breaks if words are too long

--- a/app/public/scss/base/_typography.scss
+++ b/app/public/scss/base/_typography.scss
@@ -9,9 +9,8 @@ b {
     display: none;
 }
 
-.postContent {
-    color: color("secondary");
-    white-space: nowrap;
+.post-content {
+    overflow-wrap: break-word;
 }
 
 .post-date {
